# type_trainer

./: .gitignore  Cargo.toml  README.md
doc/vhs/: lorem_ipsum.txt  type-trainer.tape
exercises/: do_not_go_gentle_into_that_good_night.txt  the_raven.txt
exercises/copy/: lorem_ipsum.txt  the_new_colossus.txt  the_raven.txt
src/: exercise.rs  exercise_type.rs  exercises.rs  file_handler.rs  lib.rs  main.rs  menu.rs  parser.rs  settings.rs  split.rs  stats.rs
src/app/: content.rs  exercise.rs  prompt.rs  settings.rs
src/exercise/: content.rs  exercise.rs  prompt.rs  settings.rs  state.rs  stats.rs  timer.rs
src/exercises/: copy.rs  quicktype.rs
src/ui/: event.rs  render.rs  tui.rs  ui.rs  update.rs
